--- a/src/components/EventDetailOverlay.css
+++ b/src/components/EventDetailOverlay.css
@@ -27,6 +27,7 @@
     box-sizing: border-box;
     box-shadow: 0 0 0.25rem 0 #666;
     border: 1px solid #666;
+    border-radius: 15px;
     width: 100%;
     height: 100%;
     padding: 1rem;
