--- a/src/components/TimeSlotEvent.css
+++ b/src/components/TimeSlotEvent.css
@@ -6,6 +6,7 @@
     display: block;
     cursor: pointer;
     border: 1px solid transparent;
+    border-radius: 15px;
     padding: 0.5rem;
     font-size: 1rem;
     overflow: hidden;
