Time slot events stack and take with of page on smaller screens and are evenly divided on larger screens

--- a/src/components/TimeSlot.css
+++ b/src/components/TimeSlot.css
@@ -1,5 +1,5 @@
 /**
- * TODO: Each time slot event should take up the full width and vertically stack
+ * TODO/DONE: Each time slot event should take up the full width and vertically stack
  * on top of each other. On larger screens, when there are multiple events for
  * a time slot, they should be evenly divided on the same row
  */
@@ -9,11 +9,16 @@
     min-height: 3rem;
     box-sizing: border-box;
 
+
     /**
-     * TODO: Figure out how not to have a bottom border on the last time-slot
+     * TODO/DONE: Figure out how not to have a bottom border on the last time-slot
      * which causes a double border
      */
 }
+.time-slot:last-child {
+  border-bottom: none;
+}
+
 .time-slot__hour-label {
     width: 4rem;
     text-align: right;
@@ -27,8 +32,10 @@
 .time-slot__events {
     padding: 0.5rem;
     flex: 1;
-
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
 }
 .time-slot__event {
     margin: 0.5rem;
@@ -37,4 +44,8 @@
 
 @media screen and (min-width: 50rem) {
     /* Override styles for larger screens here */
+    .time-slot__events {
+      flex-flow: row wrap;
+      justify-content: space-evenly;
+    }
 }
