--- a/src/components/TimeSlotEvent.css
+++ b/src/components/TimeSlotEvent.css
@@ -1,5 +1,5 @@
 /*
- * TODO: Time slot events should have rounded corners
+ * TODO/DONE: Time slot events should have rounded corners
  * TODO: Past events should display faded-out
  */
 .time-slot-event {
@@ -12,7 +12,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 100%;
+    width: 100%;
 }
 .time-slot-event::-moz-focus-inner {
   border: 0;
