--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -4,44 +4,52 @@
  */
 
 .page {
-    margin: 1rem;
+  border-radius: 15px;
+  margin: 1rem;
+
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(232,232,235,1) 93%);
 }
+
 .page__header {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .page__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
 }
+
 .page__nav-button {
-    border: 0;
-    background: none;
-    padding: 0;
-    cursor: pointer;
+  border: 0;
+  background: none;
+  padding: 0;
+  cursor: pointer;
 }
+
 .page__nav-button::-moz-focus-inner {
-    border: 0;
+  border: 0;
 }
+
 .page__nav-button::after {
-    font-size: 2rem;
-    font-weight: bold;
+  font-size: 2rem;
+  font-weight: bold;
 }
-.page__nav-button:hover,
-.page__nav-button:focus,
-.page__nav-button:active {
-    outline: none;
+
+.page__nav-button:hover, .page__nav-button:focus, .page__nav-button:active {
+  outline: none;
 }
-.page__nav-button:hover::after,
-.page__nav-button:focus::after,
-.page__nav-button:active::after {
-    text-shadow: 0 0 0.25rem #51b1e0;
+
+.page__nav-button:hover::after, .page__nav-button:focus::after, .page__nav-button:active::after {
+  text-shadow: 0 0 0.25rem #51b1e0;
 }
+
 .page__prev-day::after {
-    content: '◀︎';
+  content: '◀︎';
 }
+
 .page__next-day::after {
-    content: '▶︎';
+  content: '▶︎';
 }
