Add class that fades past due events

--- a/src/components/TimeSlotEvent.css
+++ b/src/components/TimeSlotEvent.css
@@ -40,3 +40,8 @@
     background-color: #009e60;
     border-color: #003800;
 }
+
+.time-slot-event--pastdue {
+  opacity: 0.4;
+  border: 1px solid transparent;
+}
