Improve getDisplayHour helper function, add eslint rule

--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,5 +1,5 @@
 /*
- * TODO: page needs a gradient from white (top) to light gray (bottom)
+ * TODO/DONE: page needs a gradient from white (top) to light gray (bottom)
  * TODO: On narrow screens the background shouldn't scroll when detail overlay is shown
  */
 
