Add aria-attributes to EventDetailOverlay, Add untils tests

--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,6 +1,6 @@
 /*
  * TODO/DONE: page needs a gradient from white (top) to light gray (bottom)
- * TODO: On narrow screens the background shouldn't scroll when detail overlay is shown
+ * TODO/DONE: On narrow screens the background shouldn't scroll when detail overlay is shown
  */
 
 .page {
