--- a/src/components/TimeSlotEvent.css
+++ b/src/components/TimeSlotEvent.css
@@ -1,6 +1,6 @@
 /*
  * TODO/DONE: Time slot events should have rounded corners
- * TODO: Past events should display faded-out
+ * TODO/DONE: Past events should display faded-out
  */
 .time-slot-event {
     display: block;
